法線マップを使う

--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -168,7 +168,9 @@
     <ClCompile Include="chapter4\AlphaTest\SceneAlphaTest.cpp" />
     <ClCompile Include="chapter4\loadImage.cpp" />
     <ClCompile Include="chapter4\Mesh\VBOCube.cpp" />
+    <ClCompile Include="chapter4\Mesh\VBOMesh.cpp" />
     <ClCompile Include="chapter4\MultiTexture\MultiTexture.cpp" />
+    <ClCompile Include="chapter4\NormalMap\SceneNormalMap.cpp" />
     <ClCompile Include="chapter4\UseTexture\SceneTexture.cpp" />
     <ClCompile Include="OpenGL.cpp" />
   </ItemGroup>
@@ -205,6 +207,8 @@
     <None Include="chapter4\AlphaTest\Shader\AlphaTestShader.vert" />
     <None Include="chapter4\MultiTexture\Shader\MultiTextureShader.frag" />
     <None Include="chapter4\MultiTexture\Shader\MultiTextureShader.vert" />
+    <None Include="chapter4\NormalMap\Shader\NormalMapShader.frag" />
+    <None Include="chapter4\NormalMap\Shader\NormalMapShader.vert" />
     <None Include="chapter4\UseTexture\Shader\TextureShader.frag" />
     <None Include="chapter4\UseTexture\Shader\TextureShader.vert" />
   </ItemGroup>
@@ -233,7 +237,9 @@
     <ClInclude Include="chapter4\AlphaTest\SceneAlphaTest.h" />
     <ClInclude Include="chapter4\loadImage.h" />
     <ClInclude Include="chapter4\Mesh\VBOCube.h" />
+    <ClInclude Include="chapter4\Mesh\VBOMesh.h" />
     <ClInclude Include="chapter4\MultiTexture\MultiTexture.h" />
+    <ClInclude Include="chapter4\NormalMap\SceneNormalMap.h" />
     <ClInclude Include="chapter4\UseTexture\SceneTexture.h" />
   </ItemGroup>
   <ItemGroup>
